# TPTP4X

./: .gitignore  CMakeLists.txt  JJParser  Makefile  README.md  tptp4X.c
